Bug 96237 - when a single occurence of a recurring event is moved, two entries are shown instead of one
Summary: when a single occurence of a recurring event is moved, two entries are shown ...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Reinhold Kainhofer
URL:
Keywords:
: 100091 (view as bug list)
Depends on:
Blocks:
 
Reported: 2005-01-03 19:32 UTC by Michał Kosmulski
Modified: 2005-09-01 00:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał Kosmulski 2005-01-03 19:32:53 UTC
Version:            (using KDE KDE 3.3.2)
Installed from:    Slackware Packages
OS:                Linux

Reproduce: make sure there is a recurring event of about 2 hours length visible in the calendar and "week" view is selected. Using the mouse, move the recurring event to half an hour earlier on the same day. When asked if you want to change all occurences or just one, choose to change only current occurence's time. Now, two events are visible: one with the original date and one with the new date. However, after moving to the next week and then back, only the updated entry is visible.
Comment 1 markus 2005-01-24 15:22:42 UTC
I can confirm this. I have "Ansicht" (View) "Tag" (Single day). I have a recurring event and when I drag the start line to another time, two events are displayed: The new timesetting and the old one. 

Attention: When I attempt to delete the new event, the old event is lost, too!!! 

So this is a rather critical issue. 
Comment 2 markus 2005-04-17 23:35:50 UTC
This issue is still present in KDE 3.4.0!!!
Comment 3 Reinhold Kainhofer 2005-07-24 19:04:47 UTC
*** Bug 100091 has been marked as a duplicate of this bug. ***
Comment 4 Reinhold Kainhofer 2005-09-01 00:08:45 UTC
SVN commit 455586 by kainhofe:

Fix the problem that when moving and dissociating a single item of a recurring sequence, it it shown duplicated until the view is refreshed.

BUG: 96237


 M  +3 -3      koagenda.cpp  
 M  +2 -1      koagendaview.cpp  


--- branches/KDE/3.5/kdepim/korganizer/koagenda.cpp #455585:455586
@@ -1075,11 +1075,11 @@
             if ( newInc ) {
               // don't recreate items, they already have the correct position
               emit enableAgendaUpdate( false );
-              mChanger->changeIncidence( oldIncSaved, oldInc );
+              mActionItem->dissociateFromMultiItem();
               mActionItem->setIncidence( newInc );
-              mActionItem->dissociateFromMultiItem();
               mChanger->addIncidence( newInc );
               emit enableAgendaUpdate( true );
+              mChanger->changeIncidence( oldIncSaved, oldInc );
             } else {
               KMessageBox::sorry( this, i18n("Unable to add the exception item to the "
                   "calendar. No change will be done."), i18n("Error Occurred") );
@@ -1552,7 +1552,7 @@
                                     int YTop, int YBottom )
 {
 #if 0
-  kdDebug(5850) << "KOAgenda::insertItem:" << event->summary() << "-"
+  kdDebug(5850) << "KOAgenda::insertItem:" << incidence->summary() << "-"
                 << qd.toString() << " ;top, bottom:" << YTop << "," << YBottom
                 << endl;
 #endif
--- branches/KDE/3.5/kdepim/korganizer/koagendaview.cpp #455585:455586
@@ -1353,7 +1353,8 @@
         // recreating everything even causes troubles: dropping to the day matrix
         // recreates the agenda items, but the evaluation is still in an agendaItems' code,
         // which was deleted in the mean time. Thus KOrg crashes...
-      changeIncidenceDisplayAdded( incidence );
+      if ( mAllowAgendaUpdate )
+        changeIncidenceDisplayAdded( incidence );
       break;
     }
     case KOGlobals::INCIDENCEEDITED: {