Fix the problem that when moving and dissociating a single item of a recurring sequence, it it shown duplicated until the view is refreshed.

BUG: 96237

svn path=/branches/KDE/3.5/kdepim/; revision=455586